# cb-config

./: .gitignore  IMPLEMENTATION.md  README.md  cbc-edit  manage.py  pyproject.toml  requirements.md  sample-config.json  test_form.py  test_no_json.py  test_setup.py
bootstrap/: chatbot_config.py
cbconfig/: __init__.py  cli.py  settings.py  urls.py  wsgi.py
configs/: __init__.py  admin.py  apps.py  forms.py  models.py
configs/migrations/: 0001_initial.py  0002_datasource_businessterm_fieldmapping.py  0003_bedrockcredentials_openaicredentials_and_more.py
